@@ -3,7 +3,9 @@ Version 0.2
 * implemented all remaining json_new_* functions
 * implemented json_format_string(), a basic formatting function
 * rstring: switched from char to wchar_t, to better support Unicode
+* rstring: renamed a bunch of functions in order to be more coherent
 * switched the library to wchar_t
+* fixed a bunch of memory leaks
 
 Version 0.1
 * The starting point
